--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ body {
     color: white;
     font-size: 30px;
     width: 820px;
-    height: 100%;
+    height: 450px;
     overflow: auto;
     position: absolute;
 }
@@ -107,4 +107,27 @@ body {
     background-image: url("../images/buttonPic.jpg");
     margin: 10px;
     border-radius: 10px;
+}
+
+.answerResponse {
+    font-size: 40px;
+    font-weight: bold;
+    opacity: 1;
+    text-shadow: -1.5px 0 black, 0 1.5px black, 1.5px 0 black, 0 -1.5px black; 
+    width: 780px;
+    height: 130px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 30px;
+
+}
+.answerImage {
+    max-width: 620px;
+    max-height: 250px;
+    text-align: center;
+    margin: 0 auto;
+    opacity: 1;
+    margin-top: 20px;
+    border-radius: 10px;
+
 }
