--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url("../images/hogwarts-harry-potter-background.jpg");
     background-size: cover;
 }
+
  
 .container {
     padding-top: 20px;
@@ -30,7 +31,6 @@ body {
     border: 2px solid white;
     border-radius: 10px;
     margin-top: 60px;
-    opacity: .8;
     background-image: url("../images/harrypotter-game-background.jpg");
     background-size: cover;
     
@@ -39,12 +39,11 @@ body {
 
 #gameArea {
     font-family: 'Patrick Hand', cursive;
-    opacity: 1;
     color: white;
     font-size: 30px;
     width: 820px;
     height: 450px;
-    overflow: auto;
+    text-align: center;
     position: absolute;
 }
 
@@ -61,7 +60,6 @@ body {
     font-size: 40px;
     font-weight: bold;
     font-family: 'Patrick Hand', cursive;
-    opacity: 1;
     background-image: url("../images/buttonPic.jpg");
     border-radius: 10px;
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
@@ -112,22 +110,20 @@ body {
 .answerResponse {
     font-size: 40px;
     font-weight: bold;
-    opacity: 1;
     text-shadow: -1.5px 0 black, 0 1.5px black, 1.5px 0 black, 0 -1.5px black; 
     width: 780px;
     height: 130px;
     text-align: center;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 40px;
 
 }
 .answerImage {
-    max-width: 620px;
+    max-width: 780px;
     max-height: 250px;
+    width: auto;
     text-align: center;
-    margin: 0 auto;
-    opacity: 1;
-    margin-top: 20px;
+    margin: auto;
     border-radius: 10px;
 
 }
