--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
     
 }
 
-#startBtn {
+.startBtn {
     font-size: 40px;
     font-weight: bold;
     font-family: 'Patrick Hand', cursive;
@@ -65,6 +65,10 @@ body {
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
     padding: 10px;
 
+}
+
+.startBtn:hover {
+    cursor: pointer;
 }
 
 /* Javascript elements style */
@@ -125,5 +129,26 @@ body {
     text-align: center;
     margin: auto;
     border-radius: 10px;
+
+}
+
+.restartBtn {
+    font-size: 40px;
+    font-weight: bold;
+    font-family: 'Patrick Hand', cursive;
+    background-image: url("../images/buttonPic.jpg");
+    border-radius: 10px;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    padding: 10px;
+    margin-top: 30px;
+}
+
+.end {
+    margin-top: 40px;
+}
+.end, .end2, .end3 {
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: -1.5px 0 black, 0 1.5px black, 1.5px 0 black, 0 -1.5px black; 
 
 }
